# requests-and-offers

./: .editorconfig  .env.example  .env.production  .gitattributes  .gitignore  .gitmodules  .kitsune2_bootstrap_srv  .windsurfrules  CHANGELOG.md  CLAUDE.md  COMPOSABLE_STANDARDIZATION_PLAN.md  Cargo.toml  HOLOCHAIN_0.4_TO_0.5_MIGRATION_PLAN.md  LICENSE.md  QWEN.md  README.md  TASKS.md  TASKS_Event_Bus_to_Effect_Service.md  TASKS_ISSUE_39.md  TASKS_Issue_38.md  TASKS_enhance-entity-cache.md  UNIFIED_EFFECT_TS_INTEGRATION_PLAN.md  book.toml  bun.lockb  clippy.toml  curations-0.15.json  effect-ts-app-runtime-enhancements.md  effect-ts-complete-refactor-guide.md  effect-ts-runtime-analysis.md  effect-ts-runtime-implementation-plan.md  effect-ts-users-store-refactor-example.md  flake.nix  hAppenings Requests _ Offers UI Kit.html  package-lock.json  package.json  package.json.backup  svelte.ts  tool-list-0.15.json  tsconfig.json  weave.dev.config.json
.claude/: settings.json
.claude/commands/: project.md  release.md  update-changelog.md
.claude/skills/: INTEGRATION_GUIDE.md  README.md
.cursor/rules/: administration-zome.mdc  claude-sonnet-37.mdc  documentation.mdc  effect-patterns.mdc  holochain-functional-patterns.mdc  hrea-integration.mdc  nix-environment.mdc  requests-and-offers-rules.mdc  svelte-5-coding-standards.mdc  system-architecture.mdc  task-list.mdc  testing.mdc
.github/workflows/: docs.yml  publish-happ.yml
.serena/: project.yml
.serena/memories/: actionbar-reactivity-fix-2025-11-10.md  active_archived_paths_continuation_guide.md  active_archived_paths_session_summary.md  active_archived_paths_technical_details.md  admin_dashboard_reactivity_patterns_analysis_2025_11_11.md  appimage_cicd_fix_implementation.md  changelog_update_v0_2_2_2025_12_08.md  checkpoint_2025_12_08_kangaroo_v06_complete.md  checkpoint_session_2025_11_03_complete.md  devfeatures_service_context_analysis_2025_12_18.md  holochain_peer_discovery_fix_session.md  homebrew_npm_dependency_fix_session_2025_11_03.md  kangaroo_cicd_pipeline_analysis.md  learning_holochain_migration_patterns.md  networkseed_logging_analysis_2025_11_03.md  release_checklist_improvement_session_2025_12_18.md  release_context_v0.1.8.md  release_patterns_v0.1.10.md  release_process_comprehensive_analysis_2025_12_08.md  requests_offers_loading_process_analysis.md  requests_offers_update_process_comprehensive.md  session_2025_11_03_dev_mode_analysis.md  session_2026_02_02_hrea_mapping_plan_cleanup.md  session_checkpoint_homebrew_fix_complete.md  session_checkpoint_v0_1_9_release.md  session_kangaroo-electron_holochain_v06_migration.md  session_summary_v0_2_0_release_critical_errors.md  session_v0.1.10_release_completion.md  update_bug_fix_links_and_related_data_2026_01_03.md  user_profile_type_architecture.md  user_update_deserialization_fix_session_2025_11_10.md  v0.1.9_release_plan.md  v0_1_9_release_complete_success_session.md  v0_1_9_release_execution_and_lessons.md
.windsurf/rules/: administration-zome.md  documentation.md  effect-patterns.md  nix-environment.md  rules.md  rust-error-handling.md  task-list.md
.windsurf/workflows/: create-new-zome.md  write-commit-message.md  write-unit-tests.md
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
agent-os/roles/: implementers.yml  verifiers.yml
deployment/scripts/: deploy.sh
dnas/requests_and_offers/utils/: Cargo.toml
dnas/requests_and_offers/utils/src/: dna_properties.rs  errors.rs  lib.rs  types.rs
docs/: edge-node-setup.md
documentation/: CODEBASE_DOCUMENTATION.md  Cardano-Iagon-Bootstrap-Solution.md  DOCUMENTATION_INDEX.md  MOSS_INTEGRATION.md  MVP_IMPLEMENTATION_SUMMARY.md  MVP_UPDATE_PLAN.md  QUICK_REFERENCE.md  README.md  RELEASE_CHECKLIST.md  SUMMARY.md  TROUBLESHOOTING.md  architecture.md  docker-compose-configurations.md  progenitor.md  project-overview.md  requirements.md  specifications.md  status.md  technical-specs.md  work-in-progress.md
documentation/architecture/: README.md  app-runtime.md  hrea-integration.md  overview.md
documentation/effect-ts-runtime/: effect-ts-app-runtime-enhancements.md  effect-ts-complete-refactor-guide.md  effect-ts-runtime-analysis.md  effect-ts-runtime-implementation-plan.md  effect-ts-users-store-refactor-example.md
documentation/guides/: README.md  adopting-7-layer-architecture.md  architectural-patterns.md  automated-deployment.md  contributing.md  deployment.md  development-workflow.md  domain-implementation.md  edge-node-setup.md  effect-ts-primer.md  getting-started.md  installation.md  kangaroo-deployment-process.md  testing.md
documentation/mvp/: README.md  contact-display.md  features.md  user-stories.md
documentation/post-mvp/: EXCHANGE_PROCESS_FUTURE.md  README.md  exchange-process-plan.md  matching-system.md  messaging-system.md  (+3 more)
edge-node/: README.md  happ-config.json  health-check.sh
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: start-progenitor.ts
tests/: .eslintrc.cjs  package.json  tsconfig.json  types.d.ts
tests/sweettest/: Cargo.toml
tests/sweettest/src/: lib.rs
tests/sweettest/src/common/: conductors.rs  fixtures.rs  mirrors.rs  mod.rs
tests/sweettest/tests/: mediums_of_exchange.rs  misc.rs  offers.rs  organizations.rs  requests.rs  service_types.rs  service_types_status.rs  users.rs
tests/sweettest/tests/administration/: administrator_management.rs  mod.rs  profile_status_consistency.rs  progenitor.rs  status_management.rs  successive_profile_updates.rs
ui/: .env.example  .eslintignore  .gitignore  README.md  REQUESTS_STORE_INTEGRATION_PLAN.md  bunfig.toml  package.json  playwright.config.ts  requests-implementation-plan.md  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.integration.config.ts  vitest.unit.config.ts
video/: .gitignore  README.md  package.json  remotion.config.ts  tsconfig.json
weave/: applet-dev.sh  config.ts  curations-0.15.json  weave.dev.config.json
workdir/: dna.yaml  happ.yaml  web-happ.yaml
(+878 files in other folders)
